fix(raj): improve types
- Dispatch now requires message.
- IProgram view() now supports return TView type, defaults to void.
- Add development mode CREATE_REACT_TRACE_DISPATCH console.log.
- Add View type for more general usage.

fix(counter): does increment/decrement
- Removed inline jsx lambda's into helper component.

add(index.tsx): example counter, counterNest, couinterNest2

add(raj-compose): mapEffect

add(raj-react):
- Add  development mode REACT_APP_TRACE_RAJ_REACT_RENDER_STATE console.log of state in render().
- Tightened types using raj View.
- Add ReactView for use by raj programs aiming at React using raj-react.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts-ts": "2.16.0"
   },
   "scripts": {
-    "start": "react-scripts-ts start",
+    "start": "set BROWSER=none&&set CREATE_REACT_APP_TRACE_DISPATCH=yes&&react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
